k8s/apps/demo-app-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-2
  labels:
    app: demo-app-2
spec:
  selector:
    app: demo-app-2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
