k8s/apps/demo-app-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-2
  labels:
    app: demo-app-2
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo2.local
      secretName: demo-app-2-tls
  rules:
    - host: demo2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-2
                port:
                  number: 80
